CICO-5498: Fixes for alignment issues and confirm set delete pop over styling

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -399,12 +399,21 @@ height: 410px;
     list-style: none outside none;
     margin: 0px;
     padding: 0px;
+
+    .arrow-right {
+      float: right;
+      padding-top: 3px;
+    }
 }
 
 .inactive {
-    background:rgba(0,0,0,0.1);
-    z-index: 999;
-    font-color: #ccc;
+    color: #CCC;
+    padding-top: 3px;
+    .icon-form.icon-checkbox.checked{
+      background-color: #CCC !important;
+      background-image: -moz-linear-gradient(center top , #000, #CCC) !important;
+      background-repeat: repeat;
+    }
 }
 
 .date-wrapper li {
@@ -441,6 +450,18 @@ height: 410px;
 
 }
 
+.confirm-delete {
+    text-align: center;
+    .confirm-button {
+      margin: 0 auto;
+      padding: 10px 25%;
+      text-align: center;
+    }
+}
+
+.padding-right-ten {
+  padding-right: 10px;
+}
 
 .right-arrow-grey{
    background-position: 13px -797px;
